Fix latest link for HTML preview

--- a/dos33.html
+++ b/dos33.html
@@ -816,7 +816,7 @@ that overflow into this region -->
 
 <h1><a class='section' name='Introduction'>1.0 Introduction</a></h1>
 <br>Transcribed and Annotated by Michael Pohoreski.
-<br>Latest version on GitHub: <a class='link' href='http://htmlpreview.github.com/?https://github.com/Michaelangel007/apple2_dos33/blob/master/dos33.html'>dos33.html</a>
+<br>Latest version on GitHub: <a class='link' href='https://htmlpreview.github.io/?https://github.com/Michaelangel007/apple2_dos33/blob/master/dos33.html'>dos33.html</a>
 <p>
 Numerous improvements have been made over the original DOS 3.3C assembly source code listing!
 <p>
