--- a/dos33.html
+++ b/dos33.html
@@ -1628,13 +1628,16 @@ With that "legalese" out of the way ... enjoy the read!
 1E60:AC 0E 1D       211 <meta                                 />            LDY <a class='v' href='#CCBADR'>CCBADR</a>                                      ; <b>NOTE</b> The labels <span class='code'>CCBLDR</span> and <span class='code'>IOBLDR</span> are never referenced anywhere.
 1E63:60             212 <meta                                 />            RTS
                     213 <a class='f' id='1E64' name='IOBLDR'   >IOBLDR      </a>EQU *                                           ; $3E3: GetParamRWTS (A,Y = $B7E8, IOB = Input Output Block)
-1E64:AD C2 2A       214             LDA <a class='v' href='#AIOB'  >AIOB</a>+<span class='n'>1</span>                                      ; /sarcasm <i>Really? You couldn't be consistent and call it</i> <span class='code'>IOBADR</span> ???
+1E64:AD C2 2A       214             LDA <a class='v' href='#AIOB'  >AIOB</a>+<span class='n'>1</span>                                      ;       /sarcasm <i>Really? You couldn't be consistent and call it</i> <span class='code'>IOBADR</span> ???
 1E67:AC C1 2A       215             LDY <a class='v' href='#AIOB'  >AIOB</a>
 1E6A:60             216             RTS
 1E6B:4C 51 28       217             JMP <a class='x' href='#MVCSW' >MVCSW</a>                                       ; $3EA: Set CIN/COUT to DOS
-1E6E:EA             218             NOP                                             ; [.. Normally, this would be <a class='mem' name='_1E6E' coords='2'>wastes</a> 2 bytes -- NEVER used anywhere
-1E6F:EA             219             NOP                                             ;  ..] HOWEVER they ARE needed since they are used as padding for the BRK IRQ vector.
-1E70:4C 59 FA       220             JMP <a class='e' href='#MONBRK'>MONBRK</a>                                      ; $3EF: JMP $FA59 Autostart BRK handler
+1E6E:EA             218             NOP                                             ; $3ED: [.. Normally, this would be <a class='mem' name='_1E6E' coords='2'>wastes</a> 2 bytes -- NEVER used anywhere
+1E6F:EA             219             NOP                                             ;       ... HOWEVER they ARE needed since they are used as padding to align the following BRK IRQ vector.
+                                                                                    ;       ... Diversi-DOS has: 3ED: 4C DF BC  JMP $BCDF
+                                                                                    ;       ..] Thanks Tommy for the insight!
+1E70:4C 59 FA       220             JMP <a class='e' href='#MONBRK'>MONBRK</a>                                      ; $3EF: JMP $FA59 Autostart BRK handler.
+                                                                                    ;       <b>Note:</b> This is never directly called as the Autostart ROM reads the address at $3F0, $3F1 via $FA56: 6C F0 03 <span class='code'>JMP (BRKV)</span>
 1E73:4C 65 FF       <a class='line' name='DOSINIT.221'>221</a>             JMP <a class='e' href='#MONRST'>MONRST</a>                                      ; $3F2: $9DBF,$38 Control-Reset - Why not <span class='code'>DW DBRST</span>, <span class='code'>DB $#&gt;DBRST ^ $A5</span> ??? Line #<a class='line' href='#DOSINIT.191'>191</a>
 1E76:4C 58 FF       222             JMP <a class='e' href='#IORTS' >IORTS</a>                                       ; $3F5: JMP $FF58 Ampersand handler
 1E79:4C 65 FF       223             JMP <a class='e' href='#MONRST'>MONRST</a>                                      ; $3F8: JMP $FF65 Ctrl-Y handler
