--- a/dos33.html
+++ b/dos33.html
@@ -1025,7 +1025,7 @@ With that "legalese" out of the way ... enjoy the read!
                     00086 050 <a class='d' id='0040' name='ZPGWRK'     >ZPGWRK      </a>EQU $<span class='n'>40</span>         ; ZERO PAGE WORK CELL
                     00087 051 <a class='d' name='CNUM'       >CNUM        </a>EQU $<span class='n'>44</span>         ; CONVERTED NUMERIC             ; 16-bit input number
                     00088 052 <a class='d' id='0200' name='LBUFF'      >LBUFF       </a>EQU $<span class='n'>200</span>        ; LINE BUFFER                   ; Keyboard buffer of 255 chars
-                    00089 053 <a class='f' id='FB63' name='MULT'       >MULT        </a>EQU $<span class='e'>FB63</span>       ; MULT ROUTINE<hr class='page'>
+                    00089 053 <a class='f' id='FB63' name='MULT'       >MULT        </a>EQU $<span class='e'>FB63</span>       ; MULT ROUTINE                  ; -- never referenced<hr class='page'>
                     00090 054 <a class='f' id='FE8B' name='INPRT'      >INPRT       </a>EQU $<span class='e'>FE8B</span>       ; SET IN PORT                   ; === Page <a class='page' name='page111'>111</a> === ; *sigh* Apple 2 ROM lists INPORT = $FE8B, <b>INPRT</b> = $<span class='n'>FE8D</span>
                     00091 055 <a class='f' name='OUTPTR'     >OUTPRT      </a>EQU $<span class='e'>FE95</span>       ; SET OUT PORT
                     00092 056 <a class='f' name='IBCHN'      >IBCHN       </a>EQU $<span class='e'>E836</span>       ; BASIC RUN                     ; Integer Basic
@@ -1043,7 +1043,7 @@ With that "legalese" out of the way ... enjoy the read!
                     00104 068 <a class='d' id='006F' name='ASHM2'      >ASHM2       </a>EQU $<span class='n'>6F</span>         ; AS HIGH MEM 2                 ; Applesoft Basic
                     00105 069 <a class='d' name='ASRNX'      >ASRNX       </a>EQU $<span class='n'>D6</span>         ;AS RUN-ONLY FLAG               ; Applesoft Basic
                     00106 070 <a class='d' name='ASONERR'    >ASONERR     </a>EQU $<span class='n'>D8</span>         ;AS ON-ERR GOTO FLAG            ; Applesoft Basic
-                    00107 071 <a class='d' name='ASLMEM'     >ASLMEM      </a>EQU <a class='v' href='#ASSOP'>ASSOP</a>       ; AS LOW MEM                    ; Applesoft Basic -- never referenced
+    =0067           00107 071 <a class='d' id='0067' name='ASLMEM'     >ASLMEM      </a>EQU <a class='v' href='#ASSOP'>ASSOP</a>       ; AS LOW MEM                    ; Applesoft Basic -- never referenced
                     00108 072 <a class='f' name='ASBRK1'     >ASBRK1      </a>EQU $<span class='e'>D865</span>       ; AS ROM BREAK                  ; Applesoft Basic
                     00109 073 <a class='f' name='ASBRK2'     >ASBRK2      </a>EQU $<span class='n'>1067</span>       ; AS RAM BREAK                  ; Applesoft Basic
                     00110 074 <a class='f' name='ASCNTU1'    >ASCNTU1     </a>EQU $<span class='e'>D43C</span>                                       ; ROM entry point
