Add address for VDIRTK

--- a/dos33.html
+++ b/dos33.html
@@ -5294,7 +5294,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     022 <a class="d" id=33BB' name="VTOC"  >VTOC        </a>EQU *                                           ; <a class='ts'>T11S0</a> [offset], Right side = normal snarky commentary
 33BB:04             <a class="line" name="FVCBUFS.023">023</a> <a class="d" id='33BB' name="VDOST" >VDOST       </a>DFB 4           ; DOS TYPE                      ; [00] <a class='struct' name='_33BB'>wastes</a> 1 byte -- never referenced !
                                                                                     ;      <a class='magic' name='#_33BC'>magic number</a> /sarcasm If only <span class='code'>FILESYSTEM_TYPE_VTOC EQU $4</span>
-33BC:11             024 <a class="d" name="VDIRTK">VDIRTK      </a>DFB 17          ; COLUME DIRECTORY SECTOR       ; [01] *spelling* VOLUME, *sigh* <b>TRACK</b> not <i>sector</i> -- <b>read</b> the bloody variable name!
+33BC:11             024 <a class='d' id='33BC' name="VDIRTK">VDIRTK      </a>DFB 17          ; COLUME DIRECTORY SECTOR       ; [01] *spelling* VOLUME, *sigh* <b>TRACK</b> not <i>sector</i> -- <b>read</b> the bloody variable name!
                                                                                     ;      Used by <a class='x' href='#VTIO'>VTIO</a>
                                                                                     ;      *note* This is only a copy.  To change DOS while running
                                                                                     ;             <a class='x' href='#F01A'>F01A</a>+4:11 &rarr; <a class='v' href='#DCBVTN'>DCBVTN</a> 
