--- a/dos33.html
+++ b/dos33.html
@@ -5300,8 +5300,8 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                                                                                     ;             <a class='x' href='#F01A'>F01A</a>+4:11 &rarr; <a class='v' href='#DCBVTN'>DCBVTN</a> 
                                                                                     ;              $<span class='n'>2C01</span>:<span class='n'>11</span> &rarr; $35FA
                                                                                     ;              $<span class='n'>AC01</span>:<span class='n'>11</span> &rarr; $B5FA
-33BD:0F             025 <a class="d" name="VDIRSC">VDIRSC      </a>DFB 15          ; VOLUME DIRECTORY SECTOR       ; [02] Used by File <a class="file" href="#FLOCNXB">FLOCNXB</a>, Func <a class="x" href="#RVDC">RVDC</a>, Line <span class="todo">??</span>
-33BE:04             026 <a class="d" name="VDOSRN">VDOSRN      </a>DFB 4           ; DOS RELEASE NUMBER            ; [03] *sarcasm* I guess <b>VERSION</b> made too much sense.
+33BD:0F             025 <a class="d" id='33BD' name="VDIRSC">VDIRSC      </a>DFB 15          ; VOLUME DIRECTORY SECTOR       ; [02] Used by File <a class="file" href="#FLOCNXB">FLOCNXB</a>, Func <a class="x" href="#RVDC">RVDC</a>, Line <span class="todo">??</span>
+33BE:04             026 <a class="d" id='33BE' name="VDOSRN">VDOSRN      </a>DFB 4           ; DOS RELEASE NUMBER            ; [03] *sarcasm* I guess <b>VERSION</b> made too much sense.
 33BF:00             027             DFB 0           ; SPARE                         ; [04] <a class='struct' name='_33BF'>wastes</a> 1 byte /sarcasm "<i>Because <b>someday</b> these <b>might</b> be used ... ?</i>"
 33C0:00             028             DFB 0           ; SPARE                         ; [05] <a class='struct' name='_33C0'>wastes</a> 1 byte &#x0CA0;_&#x0CA0;       Uh-huh.
 33C1:FE             029 <a class="d" name="VVOLNO">VVOLNO      </a>DFB $FE         ; VOLUME NUMBER                 ; [06]                         <b>Design for today</b>, not <i>someday</i>
